# GameFactory

./: .clang-format  .gitignore  CMakeLists.txt
GameFactoryLib/: CMakeLists.txt
GameFactoryLib/Include/: AppUpdater.h  IAppDelegate.h  IAppUpdater.h
GameFactoryLib/Include/AppUpdater/: AppUpdater.h  AppUpdaterFrame.h  IAppDelegate.h  IAppUpdater.h
GameFactoryLib/Include/DebugTools/: BenchmarkTimer.h
GameFactoryLib/Include/GameScene/: GameScene.h  IGameScene.h
GameFactoryLib/Include/GameScene/GameObjects/: GameObjectBase.h  IGameObject.h  ITransform.h
GameFactoryLib/Include/GameScene/GameObjects/GameObjectComponents/: GameObjectComponent.h  IGameObjectComponent.h  InputComponent.h  SpriteComponent.h
GameFactoryLib/Include/GameScene/GameObjects/GameObjectComponents/MovementComponents/: CircleMovementComponent.h  KinematicsComponent.h
GameFactoryLib/Include/Input/: IInputProcessor.h  InputProcessor.h  Mouse.h
GameFactoryLib/Include/Render/: IDrawable.h  IRenderManager.h  RenderManager.h
GameFactoryLib/Include/Resources/: IResourceManager.h  ResourceManager.h
GameFactoryLib/Source/: AppUpdater.cpp
GameFactoryLib/Source/AppUpdater/: AppUpdater.cpp  AppUpdaterFrame.cpp
GameFactoryLib/Source/DebugTools/: BenchmarkTimer.cpp
GameFactoryLib/Source/GameScene/: GameScene.cpp
GameFactoryLib/Source/GameScene/GameObjects/: GameObjectBase.cpp
GameFactoryLib/Source/GameScene/GameObjects/GameObjectComponents/: GameObjectComponent.cpp  InputComponent.cpp  SpriteComponent.cpp
GameFactoryLib/Source/GameScene/GameObjects/GameObjectComponents/MovementComponents/: CircleMovementComponent.cpp  KinematicsComponent.cpp
GameFactoryLib/Source/Input/: InputProcessor.cpp
GameFactoryLib/Source/Render/: RenderManager.cpp
GameFactoryLib/Source/Resources/: ResourceManager.cpp
Games/SpaceOdyssey/: CMakeLists.txt
Games/SpaceOdyssey/Include/: Constants.h  GameMainScene.h  SpaceOdyssey.h  TheFirstGame.h
Games/SpaceOdyssey/Include/GameObjects/: BackgroundObject.h  EnemySpaceShipObject.h  SpaceShipObject.h
Games/SpaceOdyssey/Include/GameObjects/GameObjectComponents/: PlayerInputComponent.h
Games/SpaceOdyssey/Source/: GameMainScene.cpp  SpaceOdyssey.cpp  TheFirstGame.cpp  main.cpp
Games/SpaceOdyssey/Source/GameObjects/: BackgroundObject.cpp  EnemySpaceShipObject.cpp  SpaceShipObject.cpp
Games/SpaceOdyssey/Source/GameObjects/GameObjectComponents/: PlayerInputComponent.cpp
